# url-shortener

./: .gitignore  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/api/: app.py  core.py  models.py  schemas.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: cdf2558144d9_creating_the_urls_table.py
